[package]
name = "twjsrs"
description = "(De)serialize TiddlyWiki tiddlers to and from their JSON format."
keywords = ["tiddlywiki", "tiddly-wiki", "json"]
version = "0.0.0"
edition = "2021"
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/langston-barrett/tsjsrs"
repository = "https://github.com/langston-barrett/twjsrs"

[dependencies]
chrono = { version = "0.4", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { version = "1", optional = true }

[features]
default = ["parse", "wrap"]
parse = ["dep:chrono", "dep:thiserror"]
wrap = ["parse"]
